# negotiation_env

./: .dockerignore  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
app/: agent.py  environment.py  grader.py  main.py  models.py  tasks.py
baseline/: run_agent.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: Chat.jsx  Controls.jsx  Dashboard.jsx  Reasoning.jsx  SuccessGauge.jsx
frontend/src/services/: api.js
tasks/: __init__.py  task1.py  task2.py  task3.py
